# tauri

./: Dockerfile  README.md  index.html  package-lock.json  package.json
android-keys/: release2.keystore
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  payments.rs
src-tauri/src/database/: mod.rs  queries.rs
src-tauri/src/models/: payment.rs
src-tauri/src/tray/: mod.rs
src/components/: BottomTabs.css  BottomTabs.jsx  PaymentForm.jsx  PaymentList.jsx  Settings.css  Settings.jsx  Titlebar.css  Titlebar.jsx
